Added SimpleScanner, Token<T>, and TokenKind w/ basic unit tests (more tests needed to pass code coverage requirements)

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -43,7 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Text\ScanningTextReaderTests.cs" />
+    <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
+    <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Application\iSynaptic.Commons\iSynaptic.Commons.csproj">
