--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -44,7 +44,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyQualifier.cs" />
     <Compile Include="ReadWriteQualifier.cs" />
-    <Compile Include="Text\ScanningTextReader.cs" />
+    <Compile Include="Text\Parsing\ScanningTextReader.cs" />
+    <Compile Include="Text\Parsing\SimpleScanner.cs" />
+    <Compile Include="Text\Parsing\Token.cs" />
+    <Compile Include="Text\Parsing\TokenKind.cs" />
     <Compile Include="Xml\ProcessingInstructionParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
