--- a/External/Tools/MBUnit/MbUnit.GUI.exe.config
+++ b/External/Tools/MBUnit/MbUnit.GUI.exe.config
@@ -4,10 +4,11 @@
     <!-- Don't kill application on first uncaught exception. -->
     <legacyUnhandledExceptionPolicy enabled="1" />
   </runtime>
-
-    <startup>
-      <supportedRuntime version="v2.0.50727" />
-      <supportedRuntime version="v1.1.4322"/>
-      <supportedRuntime version="v1.0.3705"/>     
-    </startup> 
+  <startup>
+    <supportedRuntime version="v2.0.50727" />
+    <supportedRuntime version="v1.1.4322"/>  
+  </startup>
+  <appSettings>
+    <add key="restorePreviousState" value="true" />
+  </appSettings>
 </configuration>
