Revamped NestableScope (renamed from NestedScope) Begun UnitOfWork<T> class...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -35,9 +35,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AOP\IoC.cs" />
-    <Compile Include="AOP\NestedScope.cs" />
+    <Compile Include="AOP\NestableScope.cs" />
     <Compile Include="AOP\Scope.cs" />
     <Compile Include="AOP\ScopeBounds.cs" />
+    <Compile Include="AOP\UnitOfWork.cs" />
     <Compile Include="Collections\ReadOnlyDictionary.cs" />
     <Compile Include="DataEventArgs.cs" />
     <Compile Include="Func.cs" />
