--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -42,7 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AOP\NestableScopeTests.cs" />
     <Compile Include="AOP\ScopeTests.cs" />
+    <Compile Include="AOP\StubNestableScope.cs" />
+    <Compile Include="AOP\StubScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
     <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
