Converted solution/project files to Visual Studio 2009... Added Commons project to target 3.5 version of the framework... Added Enum extensions... Renamed Proc to Action to match 3.5 framework - updated qualifier classes... Begun rewrite of AOP classes... Unit tests currently failing - will fix soon...

--- a/External/Tools/SolutionBuild.targets
+++ b/External/Tools/SolutionBuild.targets
@@ -23,7 +23,7 @@
     <NUnitPath>$(ExternalToolsPath)\NUnit</NUnitPath>
     <MbUnitPath>$(ExternalToolsPath)\MbUnit</MbUnitPath>
 
-    <TestingFramework>NUnit</TestingFramework>
+    <TestingFramework Condition="$(TestingFramework) == ''">NUnit</TestingFramework>
     <TestingOutputFileName>UnitTestResults</TestingOutputFileName>
 
     <NCoverPath>$(ExternalToolsPath)\NCover</NCoverPath>
