--- a/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
@@ -4,23 +4,24 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9BC15142-0CFC-4BA3-9CAE-86F2D0CB777F}</ProjectGuid>
+    <ProjectGuid>{D2770B18-76B1-484D-B48E-8330E1671DF5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>iSynaptic.Commons.UnitTests</RootNamespace>
-    <AssemblyName>iSynaptic.Commons.UnitTests</AssemblyName>
+    <RootNamespace>iSynaptic.Commons</RootNamespace>
+    <AssemblyName>iSynaptic.Commons.v3.5</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DOTNET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -29,37 +30,36 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;DOTNET35</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MbUnit.Framework, Version=1.0.2700.29885, Culture=neutral, PublicKeyToken=5e72ecd30bc408d5">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\External\References\MbUnit.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Rhino.Mocks, Version=3.2.0.781, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\External\References\Rhino.Mocks.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AOP\NestableScopeTests.cs" />
-    <Compile Include="AOP\ScopeTests.cs" />
-    <Compile Include="AOP\StubNestableScope.cs" />
-    <Compile Include="AOP\StubScope.cs" />
+    <Compile Include="AOP\IoC.cs" />
+    <Compile Include="AOP\NestableScope.cs" />
+    <Compile Include="AOP\Scope.cs" />
+    <Compile Include="AOP\ScopeBounds.cs" />
+    <Compile Include="Collections\ReadOnlyDictionary.cs" />
+    <Compile Include="DataEventArgs.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
-    <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Application\iSynaptic.Commons\iSynaptic.Commons.csproj">
-      <Project>{8F6C6021-0517-4033-B7DA-A07DD0112FC6}</Project>
-      <Name>iSynaptic.Commons</Name>
-    </ProjectReference>
+    <Compile Include="ReadOnlyQualifier.cs" />
+    <Compile Include="ReadWriteQualifier.cs" />
+    <Compile Include="Text\Parsing\ScanningTextReader.cs" />
+    <Compile Include="Text\Parsing\SimpleScanner.cs" />
+    <Compile Include="Text\Parsing\Token.cs" />
+    <Compile Include="Text\Parsing\TokenKind.cs" />
+    <Compile Include="Xml\ProcessingInstruction.cs" />
+    <Compile Include="Xml\ProcessingInstructionParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
