--- a/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionExtensions.cs" />
     <Compile Include="AOP\IoC.cs" />
     <Compile Include="AOP\NestableScope.cs" />
     <Compile Include="AOP\Scope.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Collections\ReadOnlyDictionary.cs" />
     <Compile Include="DataEventArgs.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
+    <Compile Include="FuncExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyQualifier.cs" />
     <Compile Include="ReadWriteQualifier.cs" />
