--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Extensions\ActionExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\FuncExtensions.cs" />
+    <Compile Include="Extensions\ObjectExtensions\MethodReflectionObjectExtensions.cs" />
     <Compile Include="Func.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifier.cs" />
