--- a/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifier.cs" />
     <Compile Include="ReadWriteQualifier.cs" />
+    <Compile Include="Runtime\Serialization\Cloneable.cs" />
     <Compile Include="Text\Parsing\ScanningTextReader.cs" />
     <Compile Include="Text\Parsing\SimpleScanner.cs" />
     <Compile Include="Text\Parsing\Token.cs" />
