--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Serialization\CloneableStub.cs" />
     <Compile Include="Runtime\Serialization\CloneableTests.cs" />
+    <Compile Include="Runtime\Serialization\DerivedCloneableStub.cs" />
     <Compile Include="Runtime\Serialization\DerivedNotCloneableStub.cs" />
     <Compile Include="Runtime\Serialization\NotCloneableStub.cs" />
     <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
