Corrected namespace on AOP classes... Added MakeConditional extension methods to Action<T> and Func<T1, TRet>... Added Delimit extension methods to IEnumerable<T>... Added ToAction extension methods to Func<...>... Changed IndexedValue to struct... Changed MethodReflectionObjectExtensions to include static and base class methods... Cleaned up field filtering for Cloneable<T>... Added CloneReferenceOnlyAttribute and updated Cloneable<T> to only copy references (not clone) fields marked with this attribute... Added extensions methods to DynamicMethod... Added extensions methods to MethodInfo... Added extensions methods to Predicate<T>... Added implementation of the Specification pattern... Began implementation of custom LINQ standard query operators for 2.0 version of Commons libary...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
@@ -56,13 +56,16 @@
     <Compile Include="AOP\ScopeTests.cs" />
     <Compile Include="AOP\StubNestableScope.cs" />
     <Compile Include="AOP\StubScope.cs" />
+    <Compile Include="BaseTestFixture.cs" />
     <Compile Include="Extensions\EnumerableExtensionsTests.cs" />
+    <Compile Include="Linq\EnumerableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Serialization\CloneableStub.cs" />
     <Compile Include="Runtime\Serialization\CloneableTests.cs" />
     <Compile Include="Runtime\Serialization\DerivedCloneableStub.cs" />
     <Compile Include="Runtime\Serialization\DerivedNotCloneableStub.cs" />
     <Compile Include="Runtime\Serialization\NotCloneableStub.cs" />
+    <Compile Include="SpecificationTests.cs" />
     <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
     <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
     <Compile Include="Transactions\SimpleObject.cs" />
@@ -73,6 +76,9 @@
       <Project>{D2770B18-76B1-484D-B48E-8330E1671DF5}</Project>
       <Name>iSynaptic.Commons.v3.5</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Linq\Customers.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
