--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
@@ -57,10 +57,13 @@
     <Compile Include="AOP\StubNestableScope.cs" />
     <Compile Include="AOP\StubScope.cs" />
     <Compile Include="BaseTestFixture.cs" />
+    <Compile Include="DataEventArgsTests.cs" />
     <Compile Include="Extensions\ActionExtensionsTests.cs" />
     <Compile Include="Extensions\EnumerableExtensionsTests.cs" />
     <Compile Include="Linq\EnumerableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadableQualifierTests.cs" />
+    <Compile Include="ReadWriteQualifierTests.cs" />
     <Compile Include="Runtime\Serialization\CloneableStub.cs" />
     <Compile Include="Runtime\Serialization\CloneableTests.cs" />
     <Compile Include="Runtime\Serialization\DerivedCloneableStub.cs" />
