--- a/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
@@ -45,16 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AOP\IoC.cs" />
     <Compile Include="AOP\NestableScope.cs" />
     <Compile Include="AOP\Scope.cs" />
     <Compile Include="AOP\ScopeBounds.cs" />
+    <Compile Include="AOP\UnitOfWork.cs" />
     <Compile Include="ArrayIndex.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionary.cs" />
-    <Compile Include="Collections\Generic\ValueEqualityComparer.cs" />
+    <Compile Include="ContainerException.cs" />
     <Compile Include="DataEventArgs.cs" />
     <Compile Include="Extensions\ActionExtensions.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
+    <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Extensions\DynamicMethodExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
