--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
@@ -56,7 +56,10 @@
     <Compile Include="AOP\ScopeTests.cs" />
     <Compile Include="AOP\StubNestableScope.cs" />
     <Compile Include="AOP\StubScope.cs" />
+    <Compile Include="AOP\UnitOfWorkStub.cs" />
+    <Compile Include="AOP\UnitOfWorkTests.cs" />
     <Compile Include="BaseTestFixture.cs" />
+    <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
     <Compile Include="DataEventArgsTests.cs" />
     <Compile Include="Extensions\ActionExtensionsTests.cs" />
     <Compile Include="Extensions\EnumerableExtensionsTests.cs" />
@@ -64,11 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifierTests.cs" />
     <Compile Include="ReadWriteQualifierTests.cs" />
-    <Compile Include="Runtime\Serialization\CloneableStub.cs" />
     <Compile Include="Runtime\Serialization\CloneableTests.cs" />
-    <Compile Include="Runtime\Serialization\DerivedCloneableStub.cs" />
-    <Compile Include="Runtime\Serialization\DerivedNotCloneableStub.cs" />
-    <Compile Include="Runtime\Serialization\NotCloneableStub.cs" />
     <Compile Include="SpecificationTests.cs" />
     <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
     <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
