Renamed ContainerException to CompoundException... Renamed IEnumerable<T>.Process() extension method to ForceEnumeration()... Fixed bugs in ArrayIndex and it is now fully tested... Fixed bug in PipelinedEnumerable that causes inner enumerable to always be null... UnitOfWork is now fully tested... Action extension methods are now tested... Collection and Dictionary extension methods are now tested... Other minor changes...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -54,10 +54,13 @@
     <Compile Include="AOP\StubScope.cs" />
     <Compile Include="AOP\UnitOfWorkStub.cs" />
     <Compile Include="AOP\UnitOfWorkTests.cs" />
+    <Compile Include="ArrayIndexTests.cs" />
     <Compile Include="BaseTestFixture.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
     <Compile Include="DataEventArgsTests.cs" />
     <Compile Include="Extensions\ActionExtensionsTests.cs" />
+    <Compile Include="Extensions\CollectionExtensionsTests.cs" />
+    <Compile Include="Extensions\DictionaryExtensionsTests.cs" />
     <Compile Include="Extensions\EnumerableExtensionsTests.cs" />
     <Compile Include="Linq\EnumerableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
