--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
@@ -58,6 +58,7 @@
     <Compile Include="AOP\StubScope.cs" />
     <Compile Include="AOP\UnitOfWorkStub.cs" />
     <Compile Include="AOP\UnitOfWorkTests.cs" />
+    <Compile Include="ArrayIndexTests.cs" />
     <Compile Include="BaseTestFixture.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
     <Compile Include="DataEventArgsTests.cs" />
