--- a/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
@@ -51,7 +51,7 @@
     <Compile Include="AOP\UnitOfWork.cs" />
     <Compile Include="ArrayIndex.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionary.cs" />
-    <Compile Include="ContainerException.cs" />
+    <Compile Include="CompoundException.cs" />
     <Compile Include="DataEventArgs.cs" />
     <Compile Include="Extensions\ActionExtensions.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
