Changed simple properties to use automatically implemented properties... IEnumerable<T>.ForEach extension method now validates input immediately, not deferred... Fixed bug in PipelinedEnumerable - inner enumerable was not being set... Added tests from CompoundException and EnumerableExtensions... Refactored ArrayIndex to better support testing...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ArrayIndexTests.cs" />
     <Compile Include="BaseTestFixture.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
+    <Compile Include="CompoundExceptionTests.cs" />
     <Compile Include="DataEventArgsTests.cs" />
     <Compile Include="Extensions\ActionExtensionsTests.cs" />
     <Compile Include="Extensions\CollectionExtensionsTests.cs" />
