Adding more tests to increase code coverage... Fixed a few bugs...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.v3.5.csproj
@@ -66,8 +66,11 @@
     <Compile Include="Extensions\ActionExtensionsTests.cs" />
     <Compile Include="Extensions\CollectionExtensionsTests.cs" />
     <Compile Include="Extensions\DictionaryExtensionsTests.cs" />
+    <Compile Include="Extensions\DynamicMethodExtensionsTests.cs" />
     <Compile Include="Extensions\EnumerableExtensionsTests.cs" />
     <Compile Include="Extensions\EnumExtensionsTests.cs" />
+    <Compile Include="Extensions\FuncExtensionsTests.cs" />
+    <Compile Include="Extensions\PredicateExtensionsTests.cs" />
     <Compile Include="Linq\EnumerableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifierTests.cs" />
@@ -78,6 +81,7 @@
     <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
     <Compile Include="Transactions\SimpleObject.cs" />
     <Compile Include="Transactions\TransactionalTests.cs" />
+    <Compile Include="Xml\ProcessingInstructionParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Application\iSynaptic.Commons\iSynaptic.Commons.v3.5.csproj">
