--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -36,7 +36,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +60,7 @@
     <Compile Include="Extensions\FuncExtensions.cs" />
     <Compile Include="Extensions\IndexedValue.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
+    <Compile Include="Extensions\IPipelinedEnumerable.cs" />
     <Compile Include="Extensions\LookAheadableValue.cs" />
     <Compile Include="Extensions\LookAheadEnumerable.cs" />
     <Compile Include="Extensions\LookAheadEnumerator.cs" />
@@ -67,6 +70,7 @@
     <Compile Include="Extensions\PredicateExtensions.cs" />
     <Compile Include="Func.cs" />
     <Compile Include="Linq\Enumerable.cs" />
+    <Compile Include="PipelineAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifier.cs" />
     <Compile Include="ReadWriteQualifier.cs" />
