--- a/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.v3.5.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\FuncExtensions.cs" />
     <Compile Include="Extensions\IndexedValue.cs" />
+    <Compile Include="Extensions\IPipelinedEnumerable.cs" />
     <Compile Include="Extensions\LookAheadableValue.cs" />
     <Compile Include="Extensions\LookAheadEnumerable.cs" />
     <Compile Include="Extensions\LookAheadEnumerator.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Extensions\ObjectExtensions\MethodReflectionObjectExtensions.cs" />
     <Compile Include="Extensions\PipelinedEnumerable.cs" />
     <Compile Include="Extensions\PredicateExtensions.cs" />
+    <Compile Include="PipelineAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifier.cs" />
     <Compile Include="ReadWriteQualifier.cs" />
