--- a/External/Tools/SolutionBuild.targets
+++ b/External/Tools/SolutionBuild.targets
@@ -80,8 +80,7 @@
 			CoverageFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
 			LogFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.log"
 			WorkingDirectory="$(BinariesPath)"
-			Assemblies="@(ApplicationAssembly)"
-      FailOnError="false"/>
+			Assemblies="@(ApplicationAssembly)" />
 
     <NCover
       Condition="$(TestingFramework) == 'MbUnit'"
@@ -91,8 +90,7 @@
 			CoverageFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
 			LogFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.log"
 			WorkingDirectory="$(BinariesPath)"
-			Assemblies="@(ApplicationAssembly)"
-      FailOnError="false"/>
+			Assemblies="@(ApplicationAssembly)" />
 
     <CreateItem Include="$(TestingOutputFileName).xml">
       <Output TaskParameter="Include" ItemName="ReportingFile" />
