--- a/External/Tools/SolutionBuild.targets
+++ b/External/Tools/SolutionBuild.targets
@@ -76,7 +76,7 @@
       Condition="$(TestingFramework) == 'NUnit'"
 			ToolPath="$(NCoverPath)"
 			CommandLineExe="$(NUnitPath)\nunit-console.exe"
-			CommandLineArgs="@(TestingAssembly -> '&quot;$(BinariesPath)\%(Filename)%(Extension)&quot;') /xml=$(RootBuildPath)\$(Configuration)\$(TestingOutputFileName).xml /framework=v2.0.50727"
+			CommandLineArgs="@(TestingAssembly -> '&quot;$(BinariesPath)\%(Filename)%(Extension)&quot;') /xml=&quot;$(RootBuildPath)\$(Configuration)\$(TestingOutputFileName).xml&quot;"
 			CoverageFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
 			LogFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.log"
 			WorkingDirectory="$(BinariesPath)"
