--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Extensions\PredicateExtensions.cs" />
     <Compile Include="IDependencyResolver.cs" />
     <Compile Include="IIdentifiable.cs" />
+    <Compile Include="ISpecification.cs" />
     <Compile Include="PipelineAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadableQualifier.cs" />
